# worker-url-shortener

./: .envrc  .gitattributes  .gitignore  Cargo.toml  README.md  biome.jsonc  bun.lockb  devenv.nix  devenv.yaml  flake.nix  justfile  package.json  rustfmt.toml  schema.sql  tasks.nix  treefmt.nix  tsconfig.json  worker-configuration.d.ts  wrangler.toml
.github/workflows/: ci.yml  deploy.yml
scripts/: seed.sh
src/: crypto.ts  index.ts  lib.rs  utils.rs
