[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A URL shortener"
repository = "https://github.com/union-labs/url-shortener"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
url = "2.5.3"
serde = "1.0.214"
# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
worker = { version = "0.4.2", features = ['http', 'axum'] }
uuid = { version = "1.11.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
