[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A URL shortener"
repository = "https://github.com/union-labs/url-shortener"
keywords = ["cloudflare", "workers", "rust", "url", "shortener"]
categories = ["web-programming::http-server"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
url = "2.5.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2.15", features = ["js"] }
worker = { version = "0.4.2", features = ['http', 'axum', 'd1'] }

[profile.release]
lto = true
strip = true
opt-level = "s"
codegen-units = 1
